responsive home page completed

--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
           <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
         </li>
       </ul>
+
+      <!-- mobile responsive code below -->
+      <div id="mobile">
+        <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+        <i class="fa fa-bars" id="menu-icon"></i>
+      </div>
+      <div id="menubar">
+        <i class="fa fa-times"></i>
+        <a href="index.html" class="active">Home</a>
+        <a href="shop.html">Shop</a>
+        <a href="blog.html">Blog</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+      </div>
     </header>
 
     <section id="hero">
@@ -435,9 +449,15 @@
     </footer>
 
     <div class="copyright">
-      <p> &copy; 2024 - Hamza Khalid - ecommerce website.</p>
+      <p> &copy; 2024 - <span> Hamza Khalid</span> - ecommerce website.</p>
     </div>
 
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+      integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="https://kit.fontawesome.com/d7bf0f61a4.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
   </body>
