--- a/shop.html
+++ b/shop.html
@@ -1,19 +1,394 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./img/favicon-16x16.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css" />
+    <title>Ecommerce Website</title>
+  </head>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Tech2etc Ecommerce Tutorial</title>
-        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
+  <body>
 
-        <link rel="stylesheet" href="style.css">
-    </head>
+    <header id="header">
+      <div class="logo">
+        <img src="./img/logo.png" alt="logo" />
+      </div>
+      <ul id="navbar">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="shop.html" class="active">Shop</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li>
+          <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+        </li>
+      </ul>
 
-    <body>
+      <!-- mobile responsive code below -->
+      <div id="mobile">
+        <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+        <i class="fa fa-bars" id="menu-icon"></i>
+      </div>
+      <div id="menubar">
+        <i class="fa fa-times"></i>
+        <a href="index.html" class="active">Home</a>
+        <a href="shop.html">Shop</a>
+        <a href="blog.html">Blog</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+      </div>
+    </header>
 
-        <script src="script.js"></script>
-    </body>
+    <section id="page-header">
+        <h2>#staysafe</h2>
+        <p>Save more with coupons & upto 70% off!</p>
+    </section>
 
+    <section id="product1" class="section-p1">
+      
+      <div class="product-container">
+        <div class="product">
+          <img src="./img/products/f1.jpg" alt="#">
+          <div class="detail">
+            <span>Adidas</span>
+            <h5>Cartoon Astronaut T-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <i class="fa-solid fa-cart-shopping cart"></i>
+        </div>
+        <div class="product">
+          <img src="./img/products/f2.jpg" alt="#">
+          <div class="detail">
+            <span>Adidas</span>
+            <h5>Cartoon Astronaut T-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <i class="fa-solid fa-cart-shopping cart"></i>
+        </div>
+        <div class="product">
+          <img src="./img/products/f3.jpg" alt="#">
+          <div class="detail">
+            <span>Adidas</span>
+            <h5>Cartoon Astronaut T-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <i class="fa-solid fa-cart-shopping cart"></i>
+        </div>
+        <div class="product">
+          <img src="./img/products/f4.jpg" alt="#">
+          <div class="detail">
+            <span>Adidas</span>
+            <h5>Cartoon Astronaut T-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <i class="fa-solid fa-cart-shopping cart"></i>
+        </div>
+        <div class="product">
+          <img src="./img/products/f5.jpg" alt="#">
+          <div class="detail">
+            <span>Adidas</span>
+            <h5>Cartoon Astronaut T-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <i class="fa-solid fa-cart-shopping cart"></i>
+        </div>
+        <div class="product">
+          <img src="./img/products/f6.jpg" alt="#">
+          <div class="detail">
+            <span>Adidas</span>
+            <h5>Cartoon Astronaut T-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <i class="fa-solid fa-cart-shopping cart"></i>
+        </div>
+        <div class="product">
+          <img src="./img/products/f7.jpg" alt="#">
+          <div class="detail">
+            <span>Adidas</span>
+            <h5>Cartoon Astronaut T-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <i class="fa-solid fa-cart-shopping cart"></i>
+        </div>
+        <div class="product">
+          <img src="./img/products/f8.jpg" alt="#">
+          <div class="detail">
+            <span>Adidas</span>
+            <h5>Cartoon Astronaut T-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <i class="fa-solid fa-cart-shopping cart"></i>
+        </div>
+
+        <div class="product">
+          <img src="./img/products/n1.jpg" alt="#">
+          <div class="detail">
+            <span>Adidas</span>
+            <h5>Cartoon Astronaut T-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <i class="fa-solid fa-cart-shopping cart"></i>
+        </div>
+        <div class="product">
+          <img src="./img/products/n2.jpg" alt="#">
+          <div class="detail">
+            <span>Adidas</span>
+            <h5>Cartoon Astronaut T-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <i class="fa-solid fa-cart-shopping cart"></i>
+        </div>
+        <div class="product">
+          <img src="./img/products/n3.jpg" alt="#">
+          <div class="detail">
+            <span>Adidas</span>
+            <h5>Cartoon Astronaut T-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <i class="fa-solid fa-cart-shopping cart"></i>
+        </div>
+        <div class="product">
+          <img src="./img/products/n4.jpg" alt="#">
+          <div class="detail">
+            <span>Adidas</span>
+            <h5>Cartoon Astronaut T-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <i class="fa-solid fa-cart-shopping cart"></i>
+        </div>
+        <div class="product">
+          <img src="./img/products/n5.jpg" alt="#">
+          <div class="detail">
+            <span>Adidas</span>
+            <h5>Cartoon Astronaut T-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <i class="fa-solid fa-cart-shopping cart"></i>
+        </div>
+        <div class="product">
+          <img src="./img/products/n6.jpg" alt="#">
+          <div class="detail">
+            <span>Adidas</span>
+            <h5>Cartoon Astronaut T-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <i class="fa-solid fa-cart-shopping cart"></i>
+        </div>
+        <div class="product">
+          <img src="./img/products/n7.jpg" alt="#">
+          <div class="detail">
+            <span>Adidas</span>
+            <h5>Cartoon Astronaut T-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <i class="fa-solid fa-cart-shopping cart"></i>
+        </div>
+        <div class="product">
+          <img src="./img/products/n8.jpg" alt="#">
+          <div class="detail">
+            <span>Adidas</span>
+            <h5>Cartoon Astronaut T-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <i class="fa-solid fa-cart-shopping cart"></i>
+        </div>
+      </div>
+
+    </section>
+
+    <section id="pagination">
+        <a href="#">1</a>
+        <a href="#">2</a>
+        <a href="#"><i class="fal fa-long-arrow-alt-right"></i></a>
+    </section>
+
+    <section id="newsletter" class="section-p1 section-m1">
+      <div class="newstext">
+        <h4>SignUp for Newsletters</h4>
+        <p>Get email updates about our latest shop and <span>special offers.</span></p>
+      </div>
+      <div class="form">
+        <input type="email" placeholder="your email adddress">
+        <button class="normal">Sign Up</button>
+      </div>
+    </section>
+
+    <footer class="section-p1">
+      <div class="col">
+        <img src="img/logo.png" alt="logo">
+        <h4>Contact</h4>
+        <p><strong>Address: </strong>Islampura, Lahore.</p>
+        <p><strong>Phone: </strong>0323-1045234</p>
+        <p><strong>Hours: </strong>10:00 - 18:00, Mon - Sat</p>
+
+        <div class="follow">
+          <h4>Follow Us</h4>
+          <div class="icon">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-pinterest-p"></i>
+            <i class="fab fa-youtube"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <h4>About</h4>
+        <a href="#">About us</a>
+        <a href="#">Delivery information</a>
+        <a href="#">Privacy policy</a>
+        <a href="#">Terms & conditions</a>
+        <a href="#">Contact us</a>
+      </div>
+
+      <div class="col">
+        <h4>My Account</h4>
+        <a href="#">Sign In</a>
+        <a href="#">View Cart</a>
+        <a href="#">My Whislist</a>
+        <a href="#">Track My Order</a>
+        <a href="#">Help</a>
+      </div>
+
+      <div class="col install">
+        <h4>Install App</h4>
+        <p>From App Store or Google Play</p>
+        <div class="row">
+          <img src="img/pay/app.jpg" alt="img">
+          <img src="img/pay/play.jpg" alt="img">
+        </div>
+        <p>Secured Payment Gateways</p>
+        <img src="img/pay/pay.png" alt="img">
+      </div>
+
+    </footer>
+
+    <div class="copyright">
+      <p> &copy; 2024 - <span> Hamza Khalid</span> - ecommerce website.</p>
+    </div>
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+      integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="https://kit.fontawesome.com/d7bf0f61a4.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
